# ai_rag

./: .env.example  .gitignore  CODE_REVIEW.md  PATCH_NOTES.md  README.md  open_urls_all.bat  ports_registry.md  pytest.ini  run.bat  smoke_batch_jobs.bat  smoke_check_dlq_depth.bat  smoke_cleanup_queues.bat
services/corporate-rag-service/: .env.example  CHANGELOG.md  Dockerfile  README.md  deploy_docker_desktop.bat  docker-entrypoint.sh  install.bat  pyproject.toml  run_local.bat
services/corporate-rag-service/alembic/versions/: 0001_initial.py  0002_chunk_fts_upgrade.py  0003_add_cross_links_table.py  0004_add_chunk_vectors_ann_index.py  0005_add_chunk_metadata_fields.py  0006_add_conversation_memory_tables.py  0007_ingestion_uniqueness_constraints.py  0008_add_telegram_conversations_table.py  0009_async_jobs_file_upload_and_embedding_mode.py  0010_create_source_sync_state.py  0011_add_chunk_vectors_updated_at.py  0012_documents_unique_tenant_source_version.py  0013_add_tenant_id_to_document_links.py  0014_chunk_vectors_updated_at_integrity_guard.py  0015_chunk_vectors_upsert_schema_alignment.py
services/corporate-rag-service/app/: main.py
services/corporate-rag-service/app/api/: routes.py
services/corporate-rag-service/app/cli/: __init__.py  fts_rebuild.py
services/corporate-rag-service/app/clients/: embeddings_client.py  ollama_client.py
services/corporate-rag-service/app/core/: config.py  logging.py  (+2 more)
services/corporate-rag-service/docs/: architectural_invariants.md  architecture.md  confluence_html_to_markdown_strategy.md  context_expansion.md  development_governance.md  file_catalog_strategy.md  observability_logging.md  pipeline_trace.md  production_grade_roadmap_v1.md  production_risk_matrix.md  rag_v1_stabilization.md  release_gate_simulation_epic_development_governance.md  release_gate_template.md
services/corporate-rag-service/tests/: conftest.py
services/embeddings-service/: .env.example  Dockerfile  pyproject.toml
services/embeddings-service/app/: main.py
services/test-worker/: .env.example  deploy_docker_desktop.bat  install.bat  pyproject.toml  run_local.bat
services/test-worker/app/: job_contract.py  log_contract.py  logger.py  main.py  metrics.py  mq.py  settings.py
(+286 files in other folders)
