[tool.poetry]
name = "corporate-rag-service"
version = "1.0.0"
description = "Corporate RAG orchestration service"
authors = ["Implementation Agent"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
psycopg = {extras=["binary"], version="^3.2.3"}
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
pgvector = "^0.3.6"
boto3 = "^1.35.60"
python-json-logger = "^2.0.7"
sentence-transformers = "^3.3.1"
rank-bm25 = "^0.2.2"
alembic = "^1.14.0"
python-docx = "^1.1.2"
pypdf = "^5.1.0"
pdfplumber = "^0.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["app"]
