[tool.poetry]
name = "embeddings-service"
version = "1.0.0"
description = "Embeddings generation API"
authors = ["Implementation Agent"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
pydantic-settings = "^2.6.1"
python-json-logger = "^2.0.7"
sentence-transformers = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["app"]
