[tool.poetry]
name = "test-worker"
version = "0.1.0"
description = "RAG test worker for EPIC-02 smoke"
authors = ["internal"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
aio-pika = "^9.4.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
